// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraggableTabs > renders correctly 1`] = `
<div
  class="d-flex align-center tabs-container"
  data-v-2b3bc4f9=""
>
  <!--v-if-->
  <div
    class="draggable-tabs"
    data-v-2b3bc4f9=""
  >
    <div
      class="draggable-tabs__tab draggable-tabs__tab--selected"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <!--v-if-->
      <span
        class="text-primary-text"
        data-v-2b3bc4f9=""
      >
        tab 1
      </span>
      
      
    </div>
    <div
      class="draggable-tabs__tab"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <!--v-if-->
      <span
        class="text-quaternary-dark-2"
        data-v-2b3bc4f9=""
      >
        tab 2
      </span>
      
      
    </div>
    <div
      class="draggable-tabs__tab"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <!--v-if-->
      <span
        class="text-quaternary-dark-2"
        data-v-2b3bc4f9=""
      >
        tab 3
      </span>
      
      
    </div>
  </div>
  <!--v-if-->
</div>
`;

exports[`DraggableTabs > renders correctly with dragging enabled 1`] = `
<div
  class="d-flex align-center tabs-container"
  data-v-2b3bc4f9=""
>
  <!--v-if-->
  <div
    class="draggable-tabs"
    data-v-2b3bc4f9=""
  >
    <div
      class="draggable-tabs__tab draggable-tabs__tab--selected"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-secondary-dark drag-icon"
        data-v-2b3bc4f9=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      <span
        class="text-primary-text"
        data-v-2b3bc4f9=""
      >
        tab 1
      </span>
      
      
    </div>
    <div
      class="draggable-tabs__tab"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-secondary-dark drag-icon"
        data-v-2b3bc4f9=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      <span
        class="text-quaternary-dark-2"
        data-v-2b3bc4f9=""
      >
        tab 2
      </span>
      
      
    </div>
    <div
      class="draggable-tabs__tab"
      data-draggable="true"
      data-v-2b3bc4f9=""
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate v-theme--light text-secondary-dark drag-icon"
        data-v-2b3bc4f9=""
        style="font-size: 16px; height: 16px; width: 16px;"
      >
        <svg
          aria-hidden="true"
          class="v-icon__svg"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9,3H11V5H9V3M13,3H15V5H13V3M9,7H11V9H9V7M13,7H15V9H13V7M9,11H11V13H9V11M13,11H15V13H13V11M9,15H11V17H9V15M13,15H15V17H13V15M9,19H11V21H9V19M13,19H15V21H13V19Z"
          />
        </svg>
      </i>
      <span
        class="text-quaternary-dark-2"
        data-v-2b3bc4f9=""
      >
        tab 3
      </span>
      
      
    </div>
  </div>
  <!--v-if-->
</div>
`;
